# practip

./: .gitignore  .gitmodules  .hgignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.in  README.md  TEST_ssvm_semi_r.cpp  TEST_ssvm_semi_r.h  aclocal.m4  cmdline.c  cmdline.h  config.h.in  config.status  configure  configure.ac  ip.cpp  ip.h  practip.cpp  practip.ggo  practip.h
src/: Makefile.am  Makefile.in  aa.cpp  aa.h  alignment.cpp  alignment.h  cmdline.c  cmdline.h  defparam.rb  feature.cpp  feature.h  ip.cpp  ip.h  practip.cpp  practip.ggo  practip.h  predict.cpp  predict.h  rna.cpp  rna.h  typedef.h
